--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laudate Cor</title>
-    <link rel="stylesheet" href="sass/style.css">
-    <link rel="stylesheet" href="/fontawesome-free-5.15.1-web/css/all.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/8c4235a2ab.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <nav class="nav-bar" id="mySidenav">
         <div class="logo">
-            <img src="img/laudate.jpg" alt="Coro Laudate Cor" srcset="">
+            <img src="laudate.jpg" alt="Coro Laudate Cor" srcset="">
         </div>
         <ul class="links" >
             <li><a href="#">Home</a></li>
@@ -59,14 +59,14 @@
             </div>
             <div class="cont">
     
-                <img src="img/laudate.jpg" alt="">
+                <img src="laudate.jpg" alt="">
             </div>
         </div>
     </div>
     <div class="section3">
 
     </div>
-    <script src="javascript/app.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
